Update dependencies to JavaFX 21 and Java 21; add tasks for creating distribution zip files and improve recovery handler connection logic